# demos

./: README.md  partybot.launch  partybot_node.launch
bottle_follow/: CMakeLists.txt  package.xml
bottle_follow/nodes/: follow.py
cfg/: Partybot.cfg
custom_messages/: CMakeLists.txt  README.md  package.xml
custom_messages/msg/: FollowerCommand.msg  FollowerStatus.msg
custom_messages/nodes/: fiducial_tracker.py
dnn_rotate/: CMakeLists.txt  README.md  package.xml
dnn_rotate/launch/: rotate.launch
dnn_rotate/nodes/: rotate.py
dnn_rotate/srv/: StringTrigger.srv
docking/: CMakeLists.txt  README.md  package.xml
docking/launch/: docking.launch
docking/nodes/: dock.py
docking/srv/: Dock.srv
fiducial_follow/: CMakeLists.txt  README.md  aruco_detect.yaml  fiducial_floor_follow.launch  follower_controller.py  package.xml
fiducial_follow/nodes/: follow.py
floor_follow/: CMakeLists.txt  README.md  package.xml
floor_follow/action/: DoFollowCmd.action
floor_follow/nodes/: floor_follow.py
floor_follow/scripts/: follower_client.py
follow_actions/: CMakeLists.txt  README.md  package.xml
follow_actions/action/: DoFollowCmd.action
magni_lidar/: CMakeLists.txt  README.md  lidar_mapmaker.rviz  package.xml  rplidar.urdf
magni_lidar/launch/: amcl.launch  magni_lidar_mapmaker.launch  magni_lidar_maprunner.launch  magni_lidar_maprunner_amcl.launch  rplidar.launch  (+1 more)
move_demo/: CMakeLists.txt  README.md
nodes/: partybot.py
partybot/: manifest.xml  partybot.launch  partybot.yaml
sonar_wanderer/: CMakeLists.txt  README.md  package.xml
(+11 files in other folders)
