<?xml version="1.0"?>
<package>
  <name>bottle_follow</name>
  <version>0.0.0</version>
  <description>The dnn_rotate package</description>

  <maintainer email="send2arohan@gmail.com">Rohan Agrawal</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <url type="website">https://github.com/UbiquityRobotics/demos</url>

  <export>
  </export>
</package>
