<?xml version="1.0"?>
<package>
  <name>docking</name>
  <version>0.0.0</version>
  <description>The docking package</description>

  <maintainer email="jimv@mrjim.com">Jim Vaughan</maintainer>
  <maintainer email="send2arohan@gmail.com">Rohan Agrawal</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>fiducials</run_depend>
  <run_depend>move_basic</run_depend>

  <url type="website">https://github.com/UbiquityRobotics/demos</url>

  <export>
  </export>
</package>
